BB-Fixed that the images were a bit to the left on smaller screen

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -150,7 +150,8 @@ footer {
     align-items: center;
 }
 #employee-section img {
-    margin: 0 20px 0 0;
+    box-sizing: border-box;
+    margin: 0 20px;
 }
 
 .employee-pic {
